--- a/templates/submit.html
+++ b/templates/submit.html
@@ -5,19 +5,29 @@
     <h2>Send a request</h2>
     <p>Use this form to send requests</p>
 
-    <!-- Placeholder form - not functional yet -->
-    <form>
+    <form method="post" action="/submit">
         <div>
-            <label for="title">Request Title:</label>
-            <input type="text" id="title" name="title" placeholder="Write the title of your request" required>
+            <label for="name">Name *</label>
+            <input type="text" id="name" name="name" placeholder="Insert your name" required>
         </div>
-        
+
         <div>
-            <label for="details">Details:</label>
-            <textarea id="details" name="details" placeholder="Describe the details of your request." rows="5" required></textarea>
+            <label for="contact">Contact</label>
+            <input type="text" id="contact" name="contact" placeholder="Email (optional)">
         </div>
-        
-        <button type="submit">Send it</button>
+
+        <div>
+            <label for="title">Request Title *</label>
+            <input type="text" id="title" name="title" placeholder="Write the tile of your request" required>
+        </div>
+
+        <div>
+            <label for="details">Details *</label>
+            <textarea id="details" name="details" placeholder="Write the details of you request" rows="5" required></textarea>
+        </div>
+
+
+        <button type="submit">Send it!</button>
     </form>
 </section>
 {% endblock %}
